--- a/index.html
+++ b/index.html
@@ -5,14 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>個人網站</title>
+    <style>
+        *{
+            padding:0px;
+            margin:0px;
+        }
+
+        body{
+            height:100vh;
+        }
+    </style>
 </head>
 <body>
-    
-<h1>Hellow World</h1>
+    <section style="height:100%;width:100%;background:gray"> 
+        <h1>Hellow</h1>
+    </section> 
 
+    <section style="height:100%;width:100%;background:rgb(212, 133, 133)">
 
+    </section>
 
+    <section style="height:100%;width:100%;background:rgb(229, 238, 149)">
 
-
+    </section>
 </body>
 </html>
