--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
           <a class="nav-link js-scroll-trigger" href="#skills">技能</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#profile">作品集</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">聯絡我</a>
         </li>
       </ul>
@@ -60,6 +63,7 @@
   </nav>
 
   <div class="container-fluid p-0">
+
     <!-- section1 about -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
@@ -92,7 +96,7 @@
 
     <hr class="m-0">
 
-    <!-- experence -->
+    <!-- section experence -->
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">經歷</h2>
@@ -119,7 +123,7 @@
               前端網頁技術班
               </div>
             <p>
-
+              為期三個半月的職前訓練課程，在其中學習了HTML、CSS、Javascript、JQuery、Boostrap、vue.js等前端技術，以及PHP、MySQL等候端技術，並且會使用Photoshop和Illustrator等設計軟體。
 
             </p>
           </div>
@@ -132,67 +136,122 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
+    <!-- section skills -->
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="skills">
       <div class="w-100">
         <h2 class="mb-5">技能</h2>
 
-        <div class="subheading mb-3"></div>
-        <!-- <ul class="list-inline dev-icons">
+        <div class="subheading mb-3">前端</div>
+        <ul class="list-inline dev-icons">
           <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
+              <img src="images/html5.svg" alt="" style="width:64px;height:64px">
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
+            <img src="images/css3.svg" alt="" style="width:64px;height:64px">
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
+            <img src="images/bootstrap.svg" alt="" style="width:64px;height:64px">
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
+            <img src="images/javascript.svg" alt="" style="width:64px;height:64px">
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-react"></i>
+            <img src="images/JQuery.png" alt="" style="width:80px;height:80px">
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
+            <img src="images/vuejs.svg" alt="" style="width:64px;height:64px">
+          </li>
+        </ul>
+
+        <div class="subheading mb-3">前端</div>
+        <ul class="list-inline dev-icons">
+          <li class="list-inline-item">
+            <img src="images/php.svg" alt="" style="width:64px;height:64px">
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
+            <img src="images/mysql.svg" alt="" style="width:64px;height:64px">
+          </li>
+        </ul>
+
+        <div class="subheading mb-3">設計</div>
+        <ul class="list-inline dev-icons">
+          <li class="list-inline-item">
+            <img src="images/photoshop.svg" alt="" style="width:64px;height:64px">
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-less"></i>
+            <img src="images/ai.svg" alt="" style="width:64px;height:64px">
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
-        </ul> -->
+        </ul>
+
       </div>
     </section>
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
+    <!-- section profile -->
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="profile">
+      <div class="w-100">
+        <h2 class="mb-5">作品集</h2>
+        <div class="row">
+          <div class="col-sm-3 my-4">
+            <div class="card">
+              <a href="http://220.128.133.15/s1080402/02_JS_StoryGame/">
+                <img src="images/JS_StoryGame.jpg" title="JS_StoryGame" alt="JS_StoryGame" style="width:250px;height:250px">
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-3 my-4">
+            <div class="card">
+              <a href="http://220.128.133.15/s1080402/03_JS_ColorPicker/">
+                <img src="images/JS_ColorPicker.jpg" title="JS_ColorPicker" alt="JS_ColorPicker" style="width:250px;height:250px">
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-3 my-4">
+            <div class="card">
+              <a href="http://220.128.133.15/s1080402/04_JS_AnalogClock/">
+                <img src="images/JS_AnalogClock.jpg" title="JS_AnalogClock" alt="JS_AnalogClock" style="width:250px;height:250px">
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-3 my-4">
+            <div class="card">
+              <a href="http://220.128.133.15/s1080402/05_JS_DigitalClock/">
+                <img src="images/JS_DigitalClock.jpg" title="JS_DigitalClock" alt="JS_DigitalClock" style="width:250px;height:250px">
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-3 my-4">
+            <div class="card">
+              <a href="http://220.128.133.15/s1080402/06_JS_OpenAPI/">
+                <img src="images/JS_OpenAPI.jpg" title="JS_OpenAPI" alt="JS_OpenAPI" style="width:250px;height:250px">
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-3 my-4">
+            <div class="card">
+              <a href="http://220.128.133.15/s1080402/San'sLogic/">
+                <img src="images/San'sLogic.jpg" title="San'sLogic" alt="San'sLogic" style="width:250px;height:250px">
+              </a>
+            </div>
+          </div>
+        </div>
+    </section>
+
+    <hr class="m-0">
+
+<!-- section contact -->
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">聯絡我</h2>
         <p>
-          
+
         </p>
         <p class="mb-0">
 
         </p>
       </div>
     </section>
-
-
   </div>
 
   <!-- Bootstrap core JavaScript -->
