--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <div class="w-100">
         <h2 class="mb-5">聯絡我</h2>
         <!-- form -->
-        <form action="api.php" method="post">
+        <form action="#" method="">
           <div class="form-group">
             <label for="name">姓名</label>
             <input type="text" class="form-control" name="name" id="name" style="width:30%" required>
