--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#home">首頁</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">關於我</a>
         </li>
         <li class="nav-item">
@@ -54,8 +57,8 @@
 
   <div class="container-fluid p-0">
 
-    <!-- section1 about -->
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
+    <!-- section1 home -->
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="home">
       <div class="w-100">
         <h1 class="mb-0">Hsieh
           <span class="text-primary">wneyen</span>
@@ -65,7 +68,7 @@
           <p></p>
           <p>TAIWAN/Taipei</p>
           <p>0922871932</p>
-          <p>vvin5318@gmail.com</p>
+          <p>Vin.HsiehWY@gmail.com</p>
         </div>
         <p class="lead mb-5">
         <!-- intro -->
@@ -78,14 +81,33 @@
           <a href="https://github.com/vvin55318">
             <i class="fab fa-github" title="GitHub"></i>
           </a>
-          <a href="#">
+          <!-- <a href="#">
             <i class="fab fa-facebook-f" title="Facebook"></i>
           </a>
           <a href="#">
             <i class="fab fa-instagram" title="Instagram"></i>
-          </a>
+          </a> -->
           
         </div>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <!-- section about -->
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="about">
+      <div class="w-100">
+        <h2 class="mb-5">關於我</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">謝文硯</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi placeat aperiam optio laudantium delectus natus omnis? Distinctio, quis? Magni, eos.
+            </p>
+          </div>
+        </div>
+
       </div>
     </section>
 
