--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">謝文硯</h3>
+            <h3 class="mb-0"></h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi placeat aperiam optio laudantium delectus natus omnis? Distinctio, quis? Magni, eos.
+             
             </p>
           </div>
         </div>
