--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#home">首頁</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">關於我</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">經歷</a>
         </li>
@@ -95,7 +95,7 @@
     <hr class="m-0">
 
     <!-- section about -->
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="about">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="about">
       <div class="w-100">
         <h2 class="mb-5">關於我</h2>
 
@@ -109,7 +109,7 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
 
     <hr class="m-0">
 
