--- a/index.html
+++ b/index.html
@@ -252,6 +252,14 @@
               </a>
             </div>
           </div>
+          <!-- <div class="col-sm-3 my-4">
+            <div class="card hidden">
+              <a href="http://220.128.133.15/s1080402/JavaScript30/01%20-%20JavaScript%20Drum%20Kit/">
+                <img src="images/JS_padController.jpg" title="JS_padController" alt="JS_padController" class="pro_ho" id="fa_img_padController">
+                <span class="pro_pop text-center pop_text" id="fa_txt_padController">使用JavaScript做出的鼓聲打擊墊</span>
+              </a>
+            </div>
+          </div> -->
         </div>
     </section>
 
