--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <div class="w-100">
         <h2 class="mb-5">聯絡我</h2>
         <!-- form -->
-        <form action="#" method="">
+        <form action="http://220.128.133.15/s1080402/profile/api.php" method="post">
           <div class="form-group">
             <label for="name">姓名</label>
             <input type="text" class="form-control" name="name" id="name" style="width:30%" required>
