--- a/index.html
+++ b/index.html
@@ -260,6 +260,16 @@
               </a>
             </div>
           </div>
+
+          <div class="col-sm-3 my-4">
+            <div class="card hidden">
+              <a href="http://220.128.133.15/s1080402/JS_WhacAMole/">
+                <img src="images/JS_WhacAMole.jpg" title="JS_WhacAMole" alt="JS_WhacAMole" class="pro_ho" id="fa_img_WhacAMole">
+                <span class="pro_pop text-center pop_text" id="fa_txt_WhacAMole">使用JavaScript做出打地鼠小遊戲</span>
+              </a>
+            </div>
+          </div>
+
         </div>
     </section>
 
