--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <a class="nav-link js-scroll-trigger" href="#profile">作品集</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">聯絡我</a>
+          <a class="nav-link js-scroll-trigger" href="#contact">聯絡我</a>
         </li>
       </ul>
     </div>
@@ -276,7 +276,7 @@
     <hr class="m-0">
 
     <!-- section contact -->
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-start flex-column" id="interests">
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-start flex-column" id="contact">
       <div class="w-100">
         <h2 class="mb-5">聯絡我</h2>
         <!-- form -->
@@ -313,6 +313,7 @@
   <script src="js/resume.min.js"></script>
   <!-- my js -->
   <script src="js/myjs.js"></script>
+  
 
 </body>
 </html>
